Did lots of stuff, worked on Lua integration more and added enemy.lua script, also changed draw order so player is always drawn on top, and fixed github nob workflow

--- a/.github/workflows/nob.yml
+++ b/.github/workflows/nob.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: sudo apt install xorg-dev
     - name: Bootstrap nob
       run: cc -o nob nob.c
     - name: Build with nob for Linux
