--- a/.github/workflows/nob.yml
+++ b/.github/workflows/nob.yml
@@ -14,10 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install dependencies
-      run: sudo apt install xorg-dev && sudo apt install gcc-mingw-w64 && sudo apt install binutils-mingw-w64
+      run: sudo apt install xorg-dev
     - name: Bootstrap nob
       run: cc -o nob nob.c
-    - name: Build with nob for Linux
+    - name: Build with nob
       run: ./nob
-    - name: Build with nob for Windows
-      run: ./nob --windows
